--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,33 @@
-pip>=25.0.1
-altair==5.5.0
-attrs==25.3.0
-blinker==1.9.0
-cachetools==5.5.2
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-contourpy==1.3.1
+# Essential & Core
+streamlit==1.25.0
+numpy==1.26.4
+pandas==2.2.1
+scikit-learn==1.3.2
+matplotlib==3.8.4
+joblib==1.3.2
+tensorflow==2.15.0  # optional: only if you're using a CNN
+
+# Common utilities
+pillow==9.5.0
+altair==5.2.0
+protobuf==4.25.3
+python-dateutil==2.8.2
+typing_extensions==4.10.0
+requests==2.31.0
+urllib3==2.2.1
+
+# Optional: for git tracking / plotting / JSON validation
+GitPython==3.1.41
+jsonschema==4.22.0
+contourpy==1.2.1
+fonttools==4.39.4
+pyparsing==3.1.2
 cycler==0.12.1
-fonttools==4.56.0
-gitdb==4.0.12
-GitPython==3.1.44
-idna==3.10
-Jinja2==3.1.6
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-kiwisolver==1.4.8
-MarkupSafe==3.0.2
-matplotlib==3.10.0
-narwhals==1.33.0
-numpy==2.2.3
-packaging==24.2
-pandas==2.2.3
-pillow==11.1.0
-protobuf==5.29.4
-pyarrow==19.0.1
-pydeck==0.9.1
-pyparsing==3.2.1
-python-dateutil==2.9.0.post0
-pytz==2025.1
-referencing==0.36.2
-requests==2.32.3
-rpds-py==0.24.0
-scikit-learn==1.6.1
-scipy==1.15.2
-setuptools==75.8.1
-six==1.17.0
-smmap==5.0.2
-streamlit==1.44.1
-tenacity==9.1.2
-threadpoolctl==3.5.0
+kiwisolver==1.4.5
+Jinja2==3.1.2
 toml==0.10.2
-tornado==6.4.2
-typing_extensions==4.13.1
-tzdata==2025.1
-urllib3==2.3.0
-wheel==0.45.1
-tensorflow==2.19.0
+setuptools==67.7.2
+wheel==0.40.0
+tenacity==8.2.3
+blinker==1.6.2
+attrs==23.1.0
